--- a/credit_card_rewards/src/main/resources/application.properties
+++ b/credit_card_rewards/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=credit_card_rewards
+spring.datasource.url=jdbc:mysql://localhost:3306/creditcardrewards
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
